--- a/style.css
+++ b/style.css
@@ -42,27 +42,14 @@ a,i{
 }
 
 #logo-container{
-    display: flex;
-    justify-content: center;
-}
-#logo{
-    width:50x;
-    margin-right: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px 10px 10px 0px;
 }
 /* NAVBAR*/
 
-#navbar{
-    padding: 10px;
-    margin: 10px auto;
-}
-
-#navbar a {
-    width: 80px;
-    color: #444;
-}
-
-#navbar a:hover{
-    color: #0a399e;
+.baixo{
+    margin-top: 20px;
 }
 
 /* MAIN IMAGE*/
@@ -81,6 +68,48 @@ a,i{
     left: 25px;
     bottom: 25px;
 }
+
+
 .teste{
     border: 1px solid red;
+}
+
+
+/* GALLERY */
+
+
+#img2{
+    background-image: url('./img/g_2.jpg');
+}
+
+#img3 {
+    background-image: url('./img/g_3.jpg');
+}
+
+#img4 {
+    background-image: url('./img/g_4.jpg');
+}
+
+#img5 {
+    background-image: url('./img/g_5.jpg');
+}
+
+#img6 {
+    background-image: url('./img/g_6.jpg');
+}
+
+#gallery-container h1{
+    text-align: center;
+}
+
+#gallery-container h1,
+#gallery-container .col-md-6,
+#gallery-container .col-12 {
+    margin-bottom: 50px;
+}
+
+.small-image-container{
+    height: 250px;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
